--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -88,6 +88,12 @@
     <Compile Include="Application\LocalLicenseApplication\frmManageLocalLicenseApplications.Designer.cs">
       <DependentUpon>frmManageLocalLicenseApplications.cs</DependentUpon>
     </Compile>
+    <Compile Include="Detain-Release-License\frmManageDetainedLicenses.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Detain-Release-License\frmManageDetainedLicenses.Designer.cs">
+      <DependentUpon>frmManageDetainedLicenses.cs</DependentUpon>
+    </Compile>
     <Compile Include="Driver\frmManageDrivers.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -272,6 +278,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Application\LocalLicenseApplication\frmManageLocalLicenseApplications.resx">
       <DependentUpon>frmManageLocalLicenseApplications.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Detain-Release-License\frmManageDetainedLicenses.resx">
+      <DependentUpon>frmManageDetainedLicenses.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Driver\frmManageDrivers.resx">
       <DependentUpon>frmManageDrivers.cs</DependentUpon>
@@ -459,9 +468,6 @@
     <None Include="Resources\manage-application.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\manage-detained-licenses.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\detain.png" />
   </ItemGroup>
   <ItemGroup>
@@ -581,6 +587,11 @@
   <ItemGroup>
     <None Include="Resources\proceed.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\manage-detained-licenses.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\gears.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
