--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -88,17 +88,23 @@
     <Compile Include="Application\LocalLicenseApplication\frmManageLocalLicenseApplications.Designer.cs">
       <DependentUpon>frmManageLocalLicenseApplications.cs</DependentUpon>
     </Compile>
-    <Compile Include="Detain-Release-License\frmDetainLicense.cs">
+    <Compile Include="Application\Detain-Release-License\frmDetainLicense.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Detain-Release-License\frmDetainLicense.Designer.cs">
+    <Compile Include="Application\Detain-Release-License\frmDetainLicense.Designer.cs">
       <DependentUpon>frmDetainLicense.cs</DependentUpon>
     </Compile>
-    <Compile Include="Detain-Release-License\frmManageDetainedLicenses.cs">
+    <Compile Include="Application\Detain-Release-License\frmManageDetainedLicenses.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Detain-Release-License\frmManageDetainedLicenses.Designer.cs">
+    <Compile Include="Application\Detain-Release-License\frmManageDetainedLicenses.Designer.cs">
       <DependentUpon>frmManageDetainedLicenses.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Application\Detain-Release-License\frmReleaseDetainedLicense.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Application\Detain-Release-License\frmReleaseDetainedLicense.Designer.cs">
+      <DependentUpon>frmReleaseDetainedLicense.cs</DependentUpon>
     </Compile>
     <Compile Include="Driver\frmManageDrivers.cs">
       <SubType>Form</SubType>
@@ -285,11 +291,14 @@
     <EmbeddedResource Include="Application\LocalLicenseApplication\frmManageLocalLicenseApplications.resx">
       <DependentUpon>frmManageLocalLicenseApplications.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Detain-Release-License\frmDetainLicense.resx">
+    <EmbeddedResource Include="Application\Detain-Release-License\frmDetainLicense.resx">
       <DependentUpon>frmDetainLicense.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Detain-Release-License\frmManageDetainedLicenses.resx">
+    <EmbeddedResource Include="Application\Detain-Release-License\frmManageDetainedLicenses.resx">
       <DependentUpon>frmManageDetainedLicenses.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Application\Detain-Release-License\frmReleaseDetainedLicense.resx">
+      <DependentUpon>frmReleaseDetainedLicense.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Driver\frmManageDrivers.resx">
       <DependentUpon>frmManageDrivers.cs</DependentUpon>
